proc-macro-error/test-crate/tests/ui/not_proc_macro.stderr
error: #[proc_macro_error] attribute can be used only with a proc-macro

  hint: if you are really sure that #[proc_macro_error] should be applied to this exact function use #[proc_macro_error(allow_not_macro)]

 --> $DIR/not_proc_macro.rs:3:1
  |
3 | #[proc_macro_error]
  | ^^^^^^^^^^^^^^^^^^^
